-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.5
-
None
-
-
db18812b9 (tqtc/lts-6.5)
Document Viewer example: Button under Help tab named "about documentviewer" opens wrong pop-up message (pop-up message of button named "about Qt")
Steps to Reproduce:
- Open Document Viewer Example
- Go to Help tab in the menu bar
- Select "about documentviewer"
- Then select "about Qt"
Actual Result:
Pop-up messages in both is the same and that of "about Qt"
Expected Result:
"about documentviewer" should open pop-up message of "about documentviewer" only
Reproducibility: 100%
| For Gerrit Dashboard: QTBUG-122615 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 542990,2 | Documentviewer demo: remove about action | tqtc/lts-6.5 | qt/tqtc-qtdoc | Status: MERGED | +2 | 0 |