Documentviewer demo: remove about action

The demo had actions named "About" and "AboutQt", both pointing to the
"AboutQt" message box. An "About" message box specific to the demo has
been implemented in 6.6.

Remove the redundant, viewer specific action in Qt 6.5.

Fixes: QTBUG-122615
Change-Id: I08b01c5b4747969308779729b9491faf2d52904e
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>