examples/demos/documentviewer/mainwindow.h
@@ -27,7 +27,6 @@ public slots:
 
 private slots:
     void on_actionOpen_triggered();
-    void on_actionAbout_triggered();
     void on_actionAboutQt_triggered();
 
 private:
